--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
         </div>
     </div>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+    </script>
 </body>
 
 </html>
