--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Ingreso de Productos</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"
+    integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
@@ -17,7 +20,7 @@
             <h1>Ingrese Producto</h1>
             <br>
 
-            <form action="/api/product" method="POST">
+            <form id="formProducts">
                 <!-- Campo nombre del producto -->
                 <div class="form-group">
                     <label for="name">Nombre</label>
@@ -46,14 +49,32 @@
                 <button class="btn btn-success mt-3">Guardar</button>
             </form>
             <br>
-            <a href="/api/product" type="button" class="btn btn-primary">Ver productos</button>
         </div>
+        <div id="products"></div>
     </div>
+    <div class="jumbotron">
+        <h1>Centro de Mensajes</h1>
+        <br>
 
+        <input type="text" id="inputUsername" class="form-control w-50 my-2 mr-2" placeholder="Ingresá tu email">
+
+        <hr>
+
+        <div id="messages"></div>
+
+        <form id="formMessages" class="form-inline" autocomplete="off">
+            <div class="form-group">
+                <input disabled id="inputMessage" type="text" class="form-control my-2 mr-2"
+                    placeholder="Ingresá un mensaje...">
+                <button disabled id="btnSubmit" type="submit" class="btn btn-primary my-2">Enviar!</button>
+            </div>
+        </form>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
+    <script src="./main.js"></script>
+    <!-- <script>
         var socket = io();
-    </script>
+    </script> -->
 </body>
 
 </html>
